apresentando valor total de deposito

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,8 +42,8 @@
 			<div class="col">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
-				    <h5 class="card-title">Meus Depositos</h5>
-				    <p class="card-text"><span th:text="${totalDepositos}"></span></p>
+				    <h5 class="card-title">Depositos</h5>
+				   <p id="totalDepositos"></p>
 				   
 				  </div>
 				</div>
@@ -52,11 +52,10 @@
 			<div class="col">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="card-link">Card link</a>
-				    <a href="#" class="card-link">Another link</a>
+				    <h5 class="card-title">Proventos</h5>
+				    
+				    <p class="card-text">5.000,00</p>
+				    
 				  </div>
 				</div>
 			</div>
@@ -64,11 +63,9 @@
 			<div class="col">
 				<div class="card" style="width: 18rem;">
 				  <div class="card-body">
-				    <h5 class="card-title">Card title</h5>
-				    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-				    <a href="#" class="card-link">Card link</a>
-				    <a href="#" class="card-link">Another link</a>
+				    <h5 class="card-title">Patrimonio</h5>
+				    <p class="card-text">4.500,00</p>
+				    
 				  </div>
 				</div>
 			</div>
